layout problems fixed

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -26,7 +26,18 @@
   background-size: cover;
 }
 // see below to style heigh of bulma boxes for user page
-// article.tile.is-child.is-6by3.notification.is-info{
-//
-//   height: 200px;
-// }
+article.tile.is-child.is-6by3.notification.is-info{
+
+  height: 40vh;
+}
+
+article.tile.is-child.is-6by3.notification.is-info{
+
+  height: 40vh;
+}
+
+div.tile.is-parent{
+   background-color: red;
+   margin: 15px;
+   padding: 15px;
+}
